# otus-cpp-basic-ls008

./: CMakeLists.txt
src/: main.cpp
